--- a/index.html
+++ b/index.html
@@ -1,82 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* .dark{
+            background-color: black;
+            color: white;
+        }
+        .light{
+            background-color: white;
+            color:black;
+        } */
+    </style>
     <title>Document</title>
 </head>
+
 <body>
     <!-- ques 9-2 -->
-<!-- <div class="event bg-zinc-500 w-full h-screen">
+    <!-- <div class="event bg-zinc-500 w-full h-screen">
     <h1>hello</h1>
 </div> -->
 
-<!-- ques 9-1,3 -->
-<!-- <button class="toggle">button</button> -->
+    <!-- ques 9-1,3 -->
+    <!-- <button class="toggle">button</button> -->
 
-<!-- Q1-1 -->
- <!-- <div id="container" class="w-full h-screen bg-zinc-500 px-10 py-10">hello world</div> -->
+    <!-- Q1 -->
+    <!-- <div id="container" class="w-full h-screen bg-zinc-500 px-10 py-10">hello world</div> -->
 
- <!-- Q1-2 -->
- <!-- <ul class="menu">
+    <!-- Q2 -->
+    <!-- <ul class="menu">
     <li>Item 1</li>
     <li>Item 2</li>
     <li>Item 3</li>
 </ul> -->
 
-<!-- Q1-3 -->
- <!-- <div class="webpage">
+    <!-- Q3 -->
+    <!-- <div class="webpage">
 <h1 class="first">hey</h1>
 <h1>my</h1>
 <h1>name</h1>
 <h1>is</h1>
 <h1>jansi</h1></div> -->
 
-<!-- Q1-4 -->
- <!-- <div class="card w-38 h-40 bg-pink-500 "></div> -->
+    <!-- Q4 -->
+    <!-- <div class="card w-38 h-40 bg-pink-500 "></div> -->
 
- <!-- Q1-5 -->
-  <!-- <button>download</button> -->
+    <!-- Q5 -->
+    <!-- <button>download</button> -->
 
-  <!-- Q2-1 -->
-   <!-- <p class="Discription">Lorem ipsum dolor sit amet.</p> -->
+    <!-- Q6 -->
+    <!-- <p class="Discription">Lorem ipsum dolor sit amet.</p> -->
 
-    <!-- Q2-2 -->
+    <!-- Q7 -->
     <!-- <h1 id="element">hey its me</h1> -->
 
-     <!-- Q2-3 -->
-<!-- <button id="submit">submit</button> -->
+    <!-- Q8 -->
+    <!-- <button id="submit">submit</button> -->
 
-<!-- Q2-4 -->
- <!-- <p>price to<span class="span">$500</span></p> -->
+    <!-- Q9 -->
+    <!-- <p>price to<span class="span">$500</span></p> -->
 
-<!-- Q2-5 -->
- <!-- <div>
+    <!-- Q10 -->
+    <!-- <div>
  <h2 class="h2s"> hey its me jansi</h2>
  <h2 class="h2s"> hey its me jansi</h2>
  <h2 class="h2s"> hey its me jansi</h2>
 </div> -->
 
-<!-- Q3-1 -->
- <!-- <div id="content">hey</div> -->
+    <!-- Q11 -->
+    <!-- <div id="content">hey</div> -->
 
- <!-- Q3-2 -->
-<!-- <div id="element">hey its me</div> -->
+    <!-- Q12 -->
+    <!-- <div id="element">hey its me</div> -->
 
-<!-- Q3-3 -->
-<!-- <p class="info"></p> -->
+    <!-- Q13 -->
+    <!-- <p class="info"></p> -->
 
-<!-- Q3-4 -->
-<!-- <div id="main">hey its me jansi</div> -->
+    <!-- Q14 -->
+    <!-- <div id="main">hey its me jansi</div> -->
 
-<!-- Q3-5 -->
- <div class="h-[40vh] w-[40vw] rounded-full">
+    <!-- Q15 -->
+    <!-- <div class="h-[40vh] w-[40vw] rounded-full">
      <div id="elementid">
     </div>
- </div>
-    
+ </div> -->
+
+    <!-- Q16  -->
+    <!-- <div class="box bg-pink-500 w-40 h-32"></div> -->
+
+    <!-- Q17 -->
+    <!-- <h1>hey its me jansi</h1> -->
+
+    <!-- Q18 -->
+    <!-- <div class="h1s"><h1>I</h1>
+    <h1>AM</h1>
+    <h1>JANSI</h1></div> -->
+
+    <!-- Q19 -->
+    <!-- <div class="box w-20 h-24 bg-pink-500 hidden"></div> -->
+
+    <!-- Q20 -->
+     <!-- <button onclick="toggleVisiblity()" class="btn bg-zinc-500 text-white rounded-md mt-20">download</button> -->
+
+     <!-- Q21 -->
+<!-- <button class="login">button</button> -->
+
+<!-- Q22 -->
+<!-- <h1 class="hoverable">jansi</h1> -->
+
+<!-- Q23 -->
+<!-- <form id="signup">
+    <input type="text" placeholder="enter here">
+    <button type="submit">submit</button>
+</form> -->
+
+
+<!-- Q49 -->
+<!-- <body class="light">
+    <button>colour theme</button>
+</body> -->
+
+
+
     <script src="main.js"></script>
 </body>
-</html>
 
+</html>
