--- a/index.html
+++ b/index.html
@@ -6,12 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        /* Q49 */
         /* .dark{
             background-color: black;
             color: white;
         }
         .light{
             background-color: white;
+            color:black;
+        } */
+
+        /* Q26 */
+        /* .highlight{
+            background-color: yellow;
+        } */
+
+        /* Q29 */
+        /* .selected{
+        color: blue;
+        } */
+
+        /* Q30 */
+        /* .disabled {
+            background-color: red;
+            color: #120f0f;
+            cursor: not-allowed;
+            border: 1px solid #aaa;
+        } */
+
+        /* .highlight{
+            background-color: yellow;
             color:black;
         } */
     </style>
@@ -103,25 +127,141 @@
     <!-- <div class="box w-20 h-24 bg-pink-500 hidden"></div> -->
 
     <!-- Q20 -->
-     <!-- <button onclick="toggleVisiblity()" class="btn bg-zinc-500 text-white rounded-md mt-20">download</button> -->
+    <!-- <button onclick="toggleVisiblity()" class="btn bg-zinc-500 text-white rounded-md mt-20">download</button> -->
 
-     <!-- Q21 -->
-<!-- <button class="login">button</button> -->
+    <!-- Q21 -->
+    <!-- <button class="login">button</button> -->
 
-<!-- Q22 -->
-<!-- <h1 class="hoverable">jansi</h1> -->
+    <!-- Q22 -->
+    <!-- <h1 class="hoverable">jansi</h1>
+      -->
 
-<!-- Q23 -->
-<!-- <form id="signup">
+    <!-- Q23 -->
+    <!-- <form id="signup">
     <input type="text" placeholder="enter here">
     <button type="submit">submit</button>
 </form> -->
 
+    <!-- Q24 -->
+    <!-- <h1>press any key see the putput on console</h1> -->
 
-<!-- Q49 -->
-<!-- <body class="light">
+    <!-- Q25 -->
+    <!-- <button>click me</button>
+<button>download</button> -->
+
+    <!-- Q26 -->
+    <!-- <p class="para">first</p>
+ <p class="para">second</p> -->
+
+    <!-- Q27 -->
+    <!-- <button class="action bg-pink-500">click me</button> -->
+
+    <!-- Q28 -->
+    <!-- <div id="popup" class="hidden w-30 h-28 bg-pink-500"></div> -->
+
+    <!-- Q29 -->
+    <!-- <ul class="list">
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+</ul> -->
+
+    <!-- Q30 -->
+    <!-- <button id="submit" class="disabled">submit</button> -->
+
+    <!-- Q31 -->
+    <!-- <div class="hero bg-pink-500 h-20 w-20"></div> -->
+
+    <!-- Q32 -->
+    <!-- <p id="old-id" class="text-bold text-3xl"> heyyy hureee</p> -->
+
+    <!-- Q33 -->
+    <!-- <ol>  
+<li>first</li>
+<li>second</li>
+<li>third</li>
+</ol> -->
+
+    <!-- Q34 -->
+    <!-- <div class="w-full h-screen bg-zinc-300">
+<h1>jansi</h1>
+<h1>chelsi</h1>
+<h1>parayag</h1>
+</div> -->
+
+    <!-- Q35 -->
+    <!-- <p id="para" class="removable">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, cumque!</p> -->
+
+    <!-- Q36 -->
+    <!-- <img id="thumbnail" > -->
+
+    <!-- Q37 -->
+    <!-- <button class="enable-button" disabled>click me</button> -->
+
+    <!-- Q38 -->
+    <!-- <div class="profile"> hey</div> -->
+
+    <!-- Q39 -->
+    <!-- Select a <a> tag and add a target="_blank" attribute to open the link in a new tab. -->
+    <!-- <a href="https://www.example.com" >link</a> -->
+
+    <!-- Q40 -->
+    <!-- <form id="registration">
+    <input type="text" required  placeholder="enter your name">
+    <input type="number" required  placeholder="enter your age">
+    <input type="text" required  placeholder="enter your email">
+    <button type="submit">submit</button>
+</form> -->
+
+    <!-- Q41 -->
+    <!-- <button>click here</button>
+<button>download</button> -->
+
+    <!-- Q42 -->
+    <!-- <div id="elem">welcome</div> -->
+
+    <!-- Q43 -->
+    <!-- <ul>
+    <li>first</li>
+    <li>second</li>
+    <li>third</li>
+ </ul> -->
+
+    <!-- Q44 -->
+    <!-- <div id="content"></div> -->
+
+    <!-- Q45 -->
+    <!-- <img id="image" src="https://plus.unsplash.com/premium_photo-1736780995479-bc82c2bffa2a?q=80&w=1074&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="not found"> -->
+
+    <!-- Q46 -->
+    <!-- <h1>TO-D0 LIST</h1>
+<ul id="todo-list">
+    <li class="text-xl">items</li>
+</ul> -->
+
+
+    <!-- Q47 -->
+    <!-- <input id="email" class="error bg-pink-200 " type="email" name="email" placeholder="enter your email"> -->
+
+    <!-- Q48 -->
+    <!-- <button id="myBtn">click here</button> -->
+
+
+    <!-- Q49 -->
+    <!-- <body class="light">
     <button>colour theme</button>
 </body> -->
+
+    <!-- Q50 -->
+
+    <!-- <div class="dropdown">
+    <button class="dropbtn">Dropdown</button>
+    <div class="content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+    </div>
+</div> -->
 
 
 
